--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -1,6 +1,6 @@
 <div class="help">
   <div class="help-button" onClick={{action "openModal" "help-modal"}}>
-    <i class="help circle outline icon"></i> Help Needed
+    <i class="help circle outline icon"></i> Help
   </div>
   {{#ui-modal name="help-modal" class="help-modal"}}
     <i class="close icon"></i>
