--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">Contact information {{help-modal model=model routeToSuccessPage=(action "routeToSuccessPage")}}</h3>
+  <h3 class="first headroom">Contact{{help-modal model=model routeToSuccessPage=(action "routeToSuccessPage")}}</h3>
   <div class="form-content">
     {{#with (changeset model MaintainerValidator) as |changeset|}}
       <div class="ui grid">
