update segment naming in ui

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -26,7 +26,7 @@
     <div class="ui hidden divider"></div>
     <div class="ui attached message">
       <span class="review edit link-text" onClick={{action "editField" "more-info"}}> <i class="icon edit"></i>Edit</span>
-      <h3 class="ui header">More Information</h3>
+      <h3 class="ui header">Data Information</h3>
     </div>
     <div class="ui segment attached">
       <div class="ui sixteen column grid">
