--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,7 @@
 <div class="ui inverted vertical masthead center aligned segment">
   <div class="ui text container">
     <div class="openaddress logo"></div>
-    {{#if (eq currentRouteName 'success')}}
-      <h1 class="ui inverted header">Success!</h1>
-    {{else}}
       <h1 class="ui inverted header">Contribute Data</h1>
-    {{/if}}
   </div>
   {{#if (eq currentRouteName 'success')}}
     <nav class="progress">
@@ -18,7 +14,7 @@
       <ul>
         <li class={{if (eq currentRouteName 'intro') "active"}}> 1. Data Source </li>
         <li class={{if (eq currentRouteName 'more-info') "active"}}> 2. Data Information </li>
-        <li class={{if (eq currentRouteName 'data-format') "active"}}> 3. Data Formatting </li>
+        <li class={{if (eq currentRouteName 'data-format') "active"}}> 3. Data Format </li>
         <li class={{if (eq currentRouteName 'contact') "active"}}> 4. Contact </li>
         <li class={{if (eq currentRouteName 'review') "active"}}> 5. Review </li>
       </ul>
