--- a/app/templates/components/join-column.hbs
+++ b/app/templates/components/join-column.hbs
@@ -12,13 +12,13 @@
       <div class="fifteen wide field">
         {{#ui-dropdown class="selection fluid data-format" selected=column onChange=(action "editField" field index) as |execute mapper|}}
           <div>
-            {{column}} (example value: {{sample-data user_data=user_data}}
+            {{column}} (sample value: {{sample-data user_data=user_data}}
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
             {{#each remainingColumnHeadings as |heading|}}
               <div class="item" data-value="{{map-value mapper heading}}">
-                {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+                {{heading}} (sample value: {{sample-data user_data=user_data heading=heading}})
               </div>
             {{/each}}
           </div>
@@ -47,7 +47,7 @@
       <div class="menu">
         {{#each remainingColumnHeadings as |heading|}}
           <div class="item" data-value="{{map-value mapper heading}}">
-            {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+            {{heading}} (sample value: {{sample-data user_data=user_data heading=heading}})
           </div>
         {{/each}}
       </div>
