--- a/app/templates/components/remove-prefix-postfix.hbs
+++ b/app/templates/components/remove-prefix-postfix.hbs
@@ -10,7 +10,7 @@
     <div class="menu">
       {{#each remainingColumnHeadings as |heading|}}
         <div class="item" data-value="{{map-value mapper heading}}">
-         {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+         {{heading}} (sample value: {{sample-data user_data=user_data heading=heading}})
         </div>
       {{/each}}
     </div>
