--- a/app/templates/components/select-column.hbs
+++ b/app/templates/components/select-column.hbs
@@ -9,7 +9,7 @@
         <div class="menu">
           {{#each columnHeadings as |heading|}}
             <div class="item" data-value="{{map-value mapper heading}}">
-              {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+              {{heading}} (sample value: {{sample-data user_data=user_data heading=heading}})
             </div>
           {{/each}}
         </div>
