--- a/app/templates/components/join-column.hbs
+++ b/app/templates/components/join-column.hbs
@@ -12,7 +12,7 @@
       <div class="fifteen wide field">
         {{#ui-dropdown class="selection fluid data-format" selected=column onChange=(action "editField" field index) as |execute mapper|}}
           <div>
-            {{column}} (example value: {{sample-data user_data=user_data}}
+            {{column}} (example value: {{sample-data user_data=user_data heading=column}}
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
