use seaparte action that doesn't require changeset to navigate to previous route. Clear store if navigating back to first route

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -150,5 +150,5 @@
       </form>
     {{/if}}
   {{/each-in}}
-  {{nav-buttons sendChangeRoute="changeRoute" back="license" next="contact"}}
+  {{nav-buttons sendChangeRoute="changeRoute" sendPreviousRoute="previousRoute" back="more-info" next="contact"}}
 </div>
