--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -90,6 +90,6 @@
         </ul>
       </div>
     {{/if}}
-    {{nav-buttons back="intro" sendChangeRoute="changeRoute" next="data-format" changeset=changeset}}
+    {{nav-buttons back="intro" sendChangeRoute="changeRoute" sendPreviousRoute="previousRoute" next="data-format" changeset=changeset}}
   {{/with}}
 </div>
