--- a/app/templates/components/nav-buttons.hbs
+++ b/app/templates/components/nav-buttons.hbs
@@ -1,6 +1,10 @@
 <div class="ui two column padded middle aligned centered color grid">
 	{{#if back}}
-		<div class="eight wide column left aligned"><button class="ui small button nav-button yellow" id="back" onClick={{action "sendChangeRoute" back}}>{{backwardsButtonText}}</button></div>
+    {{#if (eq back "intro")}}
+     <div class="eight wide column left aligned"><button class="ui small button nav-button red" onClick={{action "sendPreviousRoute" back}}>Start over</button></div>
+    {{else}}
+		  <div class="eight wide column left aligned"><button class="ui small button nav-button yellow" id="back" onClick={{action "sendPreviousRoute" back}}>{{backwardsButtonText}}</button></div>
+    {{/if}}
 	{{else}}
 		<div class="eight wide column left aligned"></div>
 	{{/if}}
