--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -38,7 +38,7 @@
           </ul>
         </div>
       {{/if}}
-      {{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" forwardButtonText="Review" changeset=changeset}}
+      {{nav-buttons showError="showError" sendChangeRoute="changeRoute" sendPreviousRoute="previousRoute" back="data-format" next="review" forwardButtonText="Review" changeset=changeset}}
     {{/with}}
   </div>
 </div>
