Clear url from input when a file to upload is selected, clear upload file when url is inputted, add button to remove file for upload

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -234,6 +234,10 @@ nav ul li.active {
   color: #0564ba;
 }
 
+.times {
+  cursor: pointer;
+}
+
 /* styling for more-info page */
 .ui.dropdown .text {
   text-overflow: ellipsis;
