--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -53,7 +53,7 @@
           </ul>
         </div>
       {{/if}}
-      {{nav-buttons sendChangeRoute="changeRoute" next="more-info" showError="showError" changeset=changeset}}
+      {{nav-buttons sendChangeRoute="changeRoute" next="more-info" loading=loading showError="showError" changeset=changeset}}
     {{/with}}
   </div>
 </div>
