change prefixed_number_pattern to prefixed_number

--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -7,7 +7,7 @@
 {{/if}}
 
 {{#if (eq field "number")}}
-<button class="ui small button basic green" onClick={{action "extractionFunction" "prefixed_number_pattern" field}}>Remove postfix street</button>
+<button class="ui small button basic green" onClick={{action "extractionFunction" "prefixed_number" field}}>Remove postfix street</button>
 {{/if}}
 
 {{#if (eq field "unit")}}
