change row_fxn_remove_prefix to remove_prefix

--- a/app/templates/components/remove-prefix-postfix.hbs
+++ b/app/templates/components/remove-prefix-postfix.hbs
@@ -19,7 +19,7 @@
 <div class="ui form">
    <div class="grouped inline fields">
     <div class="field">
-      {{ui-radio name="row_fxn_remove_prefix" label="Remove prefix" value="row_fxn_remove_prefix" current=extractionFunction onChange=(action "setPrefixPostfixFieldFromRadio" field)}}
+      {{ui-radio name="remove_prefix" label="Remove prefix" value="remove_prefix" current=extractionFunction onChange=(action "setPrefixPostfixFieldFromRadio" field)}}
     </div>
     <div class="field">
       {{ui-radio name="row_fxn_remove_postfix" label="Remove postfix" value="row_fxn_remove_postfix" current=extractionFunction onChange=(action "setPrefixPostfixFieldFromRadio" field)}}
