--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -132,7 +132,7 @@
             {{split-column field=field properties=properties columnHeadings=columnHeadings model=model numberOfExamples=numberOfExamples}}
           {{else if (eq properties.function "removePrefixOrPostfix")}}
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
-          {{else if (eq properties.function "row_fxn_remove_prefix")}}
+          {{else if (eq properties.function "remove_prefix")}}
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
           {{else if (eq properties.function "row_fxn_remove_postfix")}}
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
