change postfixed_street_pattern to postfixed_street

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -134,7 +134,7 @@
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
           {{else if (eq properties.function "remove_prefix")}}
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
-          {{else if (eq properties.function "row_fxn_remove_postfix")}}
+          {{else if (eq properties.function "remove_postfix")}}
             {{remove-prefix-postfix field=field properties=properties model=model numberOfExamples=numberOfExamples}}
           {{/if}}
           <div class="field nav-buttons">
