--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -2,7 +2,7 @@
   <i class="remove icon"></i> Cancel split
 </div>
 {{#if (eq field "street")}}
-  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_pattern" field}}>Remove prefix number</button>
+  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street" field}}>Remove prefix number</button>
   <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Remove postfix unit</button>
 {{/if}}
 
