--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -169,7 +169,7 @@
     <div class="ui hidden divider"></div>
     <div class="review-nav">
       <button class="ui button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
-      <button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
+      <button class="ui button green right floated {{if (eq loading true) "loading"}}" onClick={{action "submit"}}>Submit</button>
     </div>
     {{#ui-modal name="review-cancel" class="review-cancel" onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
       <i class="close icon"></i>
