--- a/app/templates/success.hbs
+++ b/app/templates/success.hbs
@@ -1,4 +1,13 @@
 <div class="ui text container">
-	<h4>Thank you for submitting data to OpenAddresses!</h4>
-	<p>Next, the OpenAddresses team will review your submission and then import it into the OpenAddresses database. You can track the progress of your submission here [Link to GitHub PR]. You will be notified at the email address you provided when the import process is complete.</p>
+  <h4>Thank you for submitting data to OpenAddresses!</h4>
+  <p>Next, the OpenAddresses team will review your submission and then import it into the OpenAddresses database.</p>
+
+  <p>You can track the progress of your submission at this url: 
+    {{#if model.pull_request_url}}
+      <a href={{model.pull_request_url}} target="_blank" style="cursor: pointer;">{{model.pull_request_url}}</a>.
+    {{else}}
+      <i>URL is not available</i>
+    {{/if}}
+  </p>
+  <p>You will be notified at the email address you provided when the import process is complete.</p>
 </div>
