--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -169,11 +169,14 @@
     {{#if showErrorState}}
       <div class="ui hidden divider"></div>
       <div class="ui tiny error message">
+        There is an error submitting your data:
         <ul class="list">
           {{#each errorMessages as |errorMessage|}}
             <li>{{errorMessage}}</li>
           {{/each}}
         </ul>
+        For help submitting your data, please click on "Help" above.
+
       </div>
     {{/if}}
     <div class="ui hidden divider"></div>
