--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -169,7 +169,7 @@
     {{#if showErrorState}}
       <div class="ui hidden divider"></div>
       <div class="ui tiny error message">
-        There is an error submitting your data:
+        There was a problem submitting your data:
         <ul class="list">
           {{#each errorMessages as |errorMessage|}}
             <li>{{errorMessage}}</li>
