fix column width and overflow scroll for review form

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,6 +11,10 @@ input:placeholder-shown {
   color: #bfbfbf;
 }
 
+.ten.wide.column {
+  overflow-x: auto;
+}
+
 .ui.negative.message.mobile {
   display: none;
 }
