--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -7,7 +7,9 @@
     </div>
   </div>
   <div class="intro">
-    <h3 class="first headroom">Welcome! {{help-modal model=model routeToSuccessPage=(action "routeToSuccessPage")}}</h3>
+    {{#with (changeset model HelpModalValidator) as |changeset|}}
+      <h3 class="first headroom">Welcome! {{help-modal model=model changeset=changeset}}</h3>
+    {{/with}}
     {{#with (changeset model DataURLValidator) as |changeset|}}
       <p>
         Provide link to data or upload data.
