--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -10,12 +10,8 @@
     </div>
     <div class="form content">
       <div class="description" style="font-weight: normal !important;">
-        <p>Having trouble contributing or editing a source? Please fill out this form so that we can help. </p>
+        <p>Having trouble contributing a source? Please fill out this form so that we can help. </p>
           <form class="ui form">
-           <!--  <div class="eight wide required field">
-              <label> Contact Email </label>
-              <input type="text" name="email" placeholder="Email Address" onChange={{action "setEmail"}}>
-            </div> -->
             <div class="required field ">
               <label>Email address</label>
               {{input
@@ -27,32 +23,40 @@
             </div>
             <div class="eight wide required field">
               <label> Location </label>
-              <input type="text" name="location" placeholder="Geographical area that the data represents" onChange={{action "setLocation"}}>
+              {{input
+                type="text"
+                value=(get changeset "help_location")
+                changeset=changeset
+                placeholder="Portland, Oregon"
+              }}
             </div>
-            {{#unless (or model.data_url model.data_file)}}
-              <div class="required field">
-                <label> Data Source </label>
-                <div class="inline sixteen wide fields">
-                  <div class="six wide field">
-                    <div class="ui small labeled input">
-                      <div class="ui label">URL</div>
-                      <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
-                    </div>
-                  </div>
-                  <div class="or"> OR </div>
-                  <div class="fluid field">
-                    <label for="uploadSource" class="ui icon button">
-                      <i class="file icon"></i>
-                      Choose file to upload
-                    </label>
-                    <input type="file" id="uploadSource" onChange={{action "uploadFile"}} style="display:none">{{fileName}}
+            <div class="required field">
+              <label> Data Source </label>
+              <div class="inline sixteen wide fields">
+                <div class="six wide field">
+                  <div class="ui small labeled input">
+                    <div class="ui label">URL</div>
+                    {{input
+                      type="text"
+                      value=(get changeset "data_url")
+                      changeset=changeset
+                      placeholder="URL for hosted data"
+                    }}
                   </div>
                 </div>
+                <div class="or"> OR </div>
+                <div class="fluid field">
+                  <label for="uploadSource" class="ui icon button">
+                    <i class="file icon"></i>
+                    Choose file to upload
+                  </label>
+                  <input type="file" id="uploadSource" onChange={{action "uploadFile"}} style="display:none">{{fileName}}
+                </div>
               </div>
-            {{/unless}}
+            </div>
             <div class="required field">
               <label>Provide explanation of the problem </label>
-              <textarea rows="3" onChange={{action "setText"}}></textarea>
+              {{textarea value=(get changeset "help_explanation") changeset=changeset rows="3"}}
             </div>
           </form>
       </div>
@@ -72,7 +76,6 @@
       <div class="ui black deny button" onclick={{action "cancelModal" "help-modal"}}>
         Cancel
       </div>
-      <!-- <div class="ui green right button {{if (eq loading true) "loading"}}" onclick={{action "submitModal" "help-modal"}}> -->
       <div class="ui green right button" onclick={{action "submitHelp" changeset}}>
         Submit
       </div>
