fix modal style height issue

--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -8,7 +8,7 @@
     <div class="header">
       How can we help?
     </div>
-    <div class="form content">
+    <div class="form scrolling content">
       <div class="description" style="font-weight: normal !important;">
         <p>Having trouble contributing a source? Please fill out this form so that we can help. </p>
           <form class="ui form">
