upload file through to createIssue working for help modal, review ui shows upload info, submission for uploads working

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -18,7 +18,7 @@
           </div>
           <div class="ten wide column">
             {{#if model.data_url}}{{model.data_url}}{{/if}}
-            {{#if model.data_file}}{{model.data_file.name}}{{/if}}
+            {{#if model.data_file}}{{model.data_file}}{{/if}}
           </div>
         </div>
       </div>
