--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -36,21 +36,20 @@
                 <div class="six wide field">
                   <div class="ui small labeled input">
                     <div class="ui label">URL</div>
-                    {{input
-                      type="text"
-                      value=(get changeset "data_url")
-                      changeset=changeset
-                      placeholder="URL for hosted data"
-                    }}
+                    <input type="text" placeholder="URL for hosted data" value={{dataURL}} onchange={{action "updateChangeset" changeset}} onInput={{action "setDataUrl" changeset value="target.value"}}>
                   </div>
                 </div>
                 <div class="or"> OR </div>
                 <div class="fluid field">
-                  <label for="uploadSource" class="ui icon button">
-                    <i class="file icon"></i>
-                    Choose file to upload
-                  </label>
-                  <input type="file" id="uploadSource" onChange={{action "uploadFile"}} style="display:none">{{fileName}}
+                  {{#if dataFile}}
+                    <div>{{fileName}} <i class="times circle icon" onClick={{action "clearUploadFile" changeset}}></i></div>
+                  {{else}}
+                    <label for="uploadSource" class="ui icon button">
+                      <i class="file icon"></i>
+                      Choose file to upload
+                    </label>
+                    <input type="file" id="uploadSource" onChange={{action "uploadFile" changeset}} style="display:none">
+                  {{/if}}
                 </div>
               </div>
             </div>
@@ -76,7 +75,7 @@
       <div class="ui black deny button" onclick={{action "cancelModal" "help-modal"}}>
         Cancel
       </div>
-      <div class="ui green right button" onclick={{action "submitHelp" changeset}}>
+      <div class="ui green right {{if (eq loading true) "loading"}} button" onclick={{action "submitHelp" changeset}}>
         Submit
       </div>
     </div>
