--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -25,7 +25,7 @@
             value=(get changeset "data_url")
             changeset=changeset
             placeholder="URL for hosted data"
-            key-press="clearUploadFile"
+            key-up=(action "setDataUrl")
           }}
         </div>
         <div class="ui horizontal divider">
@@ -53,7 +53,7 @@
           </ul>
         </div>
       {{/if}}
-      {{nav-buttons sendChangeRoute="changeRoute" next="more-info" loading=loading showError="showError" changeset=changeset}}
+      {{nav-buttons sendChangeRoute="changeRoute" next="more-info" loading=loading showError="showError" changeset=changeset proceed=proceed}}
     {{/with}}
   </div>
 </div>
