--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -131,6 +131,14 @@
                   </td>
                 </tr>
               {{/if}}
+              {{#if properties.may_contain_units}}
+                <tr>
+                  <td>May contain units</td>
+                  <td>
+                    {{properties.may_contain_units}}
+                  </td>
+                </tr>
+              {{/if}}
             </tbody>
           </table>
         {{/if}}
